Added Store Rating
Added Store Rating with CRUD and another element for Product Raating and MYSQL Set up

--- a/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/src/main/resources/application.properties
+++ b/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/src/main/resources/application.properties
@@ -1,3 +1,19 @@
 spring.application.name=swiftthrift
 
+#Setup JDBC connection – this is a comment
+spring.datasource.url=jdbc:mysql://localhost:3306/swiftthrift
 
+#Setup datasource driver  – this is a comment
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#Setup database login credentials  – this is a comment. 
+spring.datasource.username=root
+#MEFANIA SETUP PASSWORD FOR MYSQL
+spring.datasource.password=Mefania123456!
+
+#Auto create tables based on entities  – this is a comment
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql=true
+
+#for stack trace error not to appear   – this is a comment
+server.error.include-stacktrace=never
