--- a/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/pom.xml
+++ b/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/pom.xml
@@ -92,6 +92,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-client</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+        <version>22.3.0</version>
+</dependency>
 	</dependencies>
 
 	<build>
