--- a/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/src/main/resources/application.properties
+++ b/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/src/main/resources/application.properties
@@ -32,3 +32,7 @@ spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleap
 #Picture Uploads:
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
+
+
+#Stripe
+#stripe.secret.key=sk_test_your_secret_key_here
