--- a/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/src/main/resources/application.properties
+++ b/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/src/main/resources/application.properties
@@ -20,8 +20,8 @@ server.error.include-stacktrace=never
 
 
 # GOOGLE API
-#spring.security.oauth2.client.registration.google.client-id=
-#spring.security.oauth2.client.registration.google.client-secret=
+spring.security.oauth2.client.registration.google.client-id=169970595939-d0me5b5m7n0rgfdpvl223u5jhaoln302.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
