trying to connect to the deployed db
trying to connect to the deployed MYSQL db

--- a/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/src/main/resources/application.properties
+++ b/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/src/main/resources/application.properties
@@ -1,25 +1,14 @@
 spring.application.name=swiftthrift
 
-#Setup JDBC connection – this is a comment
-spring.datasource.url=jdbc:mysql://localhost:3306/swiftthrift
-
-#Setup datasource driver  – this is a comment
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-#Setup database login credentials  – this is a comment. 
+spring.datasource.url=jdbc:mysql://35.247.175.212:3306/swiftthrift
 spring.datasource.username=root
-#MEFANIA SETUP PASSWORD FOR MYSQL
-spring.datasource.password=Mefania123456!
-
-#Auto create tables based on entities  – this is a comment
-spring.jpa.hibernate.ddl-auto = update
+spring.datasource.password=pass1
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-#for stack trace error not to appear   – this is a comment
-server.error.include-stacktrace=never
 
 
-# GOOGLE API
 spring.security.oauth2.client.registration.google.client-id=169970595939-d0me5b5m7n0rgfdpvl223u5jhaoln302.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
@@ -29,6 +18,5 @@ spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapi
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 
 
-#Picture Uploads:
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
