--- a/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/src/main/resources/application.properties
+++ b/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=swiftthrift
-
 #Setup JDBC connection ? this is a comment
 spring.datasource.url=jdbc:mysql://localhost:3306/swiftthrift
 
@@ -18,7 +17,6 @@ spring.jpa.show-sql=true
 server.error.include-stacktrace=never
 
 
-
 spring.security.oauth2.client.registration.google.client-id=169970595939-d0me5b5m7n0rgfdpvl223u5jhaoln302.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
@@ -28,5 +26,7 @@ spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapi
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 
 
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=20MB
+spring.servlet.multipart.max-request-size=10MB
+
