--- a/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/src/main/resources/application.properties
+++ b/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/src/main/resources/application.properties
@@ -1,24 +1,13 @@
 spring.application.name=swiftthrift
 #Setup JDBC connection ? this is a comment
-spring.datasource.url=jdbc:mysql://localhost:3306/swiftthrift
-
-#Setup datasource driver?this is a comment
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-#Setup database login credentials  ? this is a comment.
+spring.datasource.url=jdbc:mysql://34.126.191.121/swiftthriftdb
 spring.datasource.username=root
-spring.datasource.password=Mefania123456!
-
-#Auto create tables based on entities  ? this is a comment
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql=true
-
-#for stack trace error not to appear   ? this is a comment
-server.error.include-stacktrace=never
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
 
 
-spring.security.oauth2.client.registration.google.client-id=169970595939-d0me5b5m7n0rgfdpvl223u5jhaoln302.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=572477343757-vp6997ded48k6rpb3sdmp34m0ierib93.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
