--- a/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/pom.xml
+++ b/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/pom.xml
@@ -144,8 +144,14 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>24.6.0</version>
+        </dependency>
 
-	</dependencies>
+
+    </dependencies>
 
 	<build>
 		<plugins>
