--- a/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/pom.xml
+++ b/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/pom.xml
@@ -144,7 +144,11 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version>
+        </dependency>
 	</dependencies>
 
 	<build>
