--- a/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/src/main/resources/application.properties
+++ b/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/src/main/resources/application.properties
@@ -1,19 +1,13 @@
-#Setup JDBC connection ? this is a comment
-spring.datasource.url=jdbc:mysql://localhost:3306/swiftthrift
-
-#Setup datasource driver?this is a comment
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-#Setup database login credentials  ? this is a comment.
-spring.datasource.username=root
-spring.datasource.password=Mefania123456!
-
-#Auto create tables based on entities  ? this is a comment
-spring.jpa.hibernate.ddl-auto = update
+spring.application.name=swiftthrift
+# Use environment variables for production
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-#for stack trace error not to appear   ? this is a comment
-server.error.include-stacktrace=never
+
 
 spring.security.oauth2.client.registration.google.client-id=572477343757-vp6997ded48k6rpb3sdmp34m0ierib93.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
