--- a/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/src/main/resources/application.properties
+++ b/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 spring.application.name=swiftthrift
 # Use environment variables for production
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+# Database Connection
+spring.datasource.url=jdbc:postgresql://dpg-d06gt0s9c44c73fhpr7g-a:5432/swiftthriftdb
+spring.datasource.username=swiftthriftdb
+spring.datasource.password=NZWbCOiu69r9iY0hsnxNbjah5p5jiOBS
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA Hibernate settings (recommended)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 
 
 
