--- a/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/src/main/resources/application.properties
+++ b/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/src/main/resources/application.properties
@@ -1,15 +1,18 @@
 spring.application.name=swiftthrift
 # Use environment variables for production
 # Database Connection
-spring.datasource.url=jdbc:postgresql://dpg-d06gt0s9c44c73fhpr7g-a:5432/swiftthriftdb
-spring.datasource.username=swiftthriftdb
-spring.datasource.password=NZWbCOiu69r9iY0hsnxNbjah5p5jiOBS
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:mysql://google/swiftthrift-db?cloudSqlInstance=swiftthrift-457008:asia-southeast1:swiftthrift&socketFactory=com.google.cloud.sql.mysql.SocketFactory&useSSL=false
 
-# JPA Hibernate settings (recommended)
-spring.jpa.hibernate.ddl-auto=update
+#Setup datasource driver?this is a comment
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#Setup database login credentials  ? this is a comment.
+spring.datasource.username=root
+spring.datasource.password=root
+
+#Auto create tables based on entities  ? this is a comment
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 
 
