--- a/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/pom.xml
+++ b/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/pom.xml
@@ -149,6 +149,18 @@
             <artifactId>postgresql</artifactId>
             <version>42.6.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.cloud.sql</groupId>
+            <artifactId>mysql-socket-factory</artifactId>
+            <version>1.10.0</version>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -162,8 +174,8 @@
                 <artifactId>appengine-maven-plugin</artifactId>
                 <version>2.4.4</version>
                 <configuration>
-                <version>1</version>
-                <projectId>swiftthrift-457311</projectId>
+                    <version>1</version>
+                    <projectId>swiftthrift-457008</projectId>
                 </configuration>
             </plugin>
 		</plugins>
