--- a/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/pom.xml
+++ b/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/pom.xml
@@ -149,7 +149,14 @@
             <artifactId>postgresql</artifactId>
             <version>42.6.0</version>
         </dependency>
-	</dependencies>
+
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>24.0.0</version>
+        </dependency>
+
+    </dependencies>
 
 	<build>
 		<plugins>
