--- a/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/pom.xml
+++ b/backend/SPRINGBOOT_PROJECT/swiftthrift/swiftthrift/pom.xml
@@ -156,6 +156,13 @@
             <version>24.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-storage</artifactId>
+            <version>2.30.0</version>
+        </dependency>
+
+
     </dependencies>
 
 	<build>
